#15: Got bugs out of recent component changes and restyled checkbox alignment a little bit.

--- a/content/src/main/content/jcr_root/apps/acs-commons/components/utilities/manage-controlled-processes/clientlibs/css/process-manager.css
+++ b/content/src/main/content/jcr_root/apps/acs-commons/components/utilities/manage-controlled-processes/clientlibs/css/process-manager.css
@@ -31,3 +31,12 @@ coral-Dialog-content .coral-Form-fieldlabel {
     margin: 0;
     clear: none;
 }
+
+.coral-Form--aligned .coral-Form-fieldwrapper--singleline {
+    margin-left: 8.65em !important;
+}
+
+.coral-Form--aligned .coral-Form-fieldwrapper--singleline label.coral-Checkbox {
+    width: 20%;
+    min-width: 140px;
+}
